# cRPG

./: .clang-format  .gitignore  CMakeLists.txt  cRPG.cpp
Assets/xml_files/: WeaponShopDefs_1.xml
cRPG/: Actor.cpp  Actor.h  Button.cpp  Colors.h  Console.cpp  Console.h  Equipment.cpp  Equipment.h  Game.cpp  Game.h  Inventory.cpp  Inventory.h  Item.h  Keyboard.cpp  Keys.h  Logger.cpp  Logger.h  Party.cpp  Party.h  Player.cpp  Player.h  Selector.h  Stats.cpp  Stats.h  cRPG.cpp  cRPG.h
cRPG/Assets/xml_files/: ArmourDefs.xml  ArmourShopDefs_1.xml  ItemDefs.xml  WeaponDefs.xml
cRPG/states/: EquipmentMenuState.cpp  EquipmentMenuState.h  GameMenuState.cpp  GameMenuState.h  GameState.cpp  GameState.h  ItemMenuState.cpp  ItemMenuState.h  StateMachine.cpp  StateMachine.h  StatusMenuState.cpp
cRPG/utilities/: EquipmentLoader.cpp  Globals.cpp  Globals.h  ItemCreator.h  ItemLoader.cpp  Parser.h  ShopLoader.cpp  ShopParameters.h  Timer.cpp  Timer.h  Typewriter.cpp  Typewriter.h  crpg_utils.cpp  crpg_utils.h
include/cRPG/: Actor.h  Button.h  Colors.h  Console.h  Equipment.h  Game.h  Inventory.h  Item.h  Keyboard.h  Keys.h  Logger.h  Party.h  Player.h  Potion.h  Selector.h  Stats.h
include/cRPG/states/: EquipmentMenuState.h  GameMenuState.h  GameState.h  InterfaceState.h  ItemMenuState.h  ShopState.h  StateMachine.h  StatusMenuState.h
include/cRPG/utilities/: EquipmentLoader.h  Globals.h  ItemCreator.h  ItemLoader.h  Parser.h  ShopLoader.h  ShopParameters.h  Timer.h  Typewriter.h  crpg_utils.h
src/: Actor.cpp  Button.cpp  Console.cpp  Equipment.cpp  Game.cpp  Inventory.cpp  Keyboard.cpp  Logger.cpp  Party.cpp  Player.cpp  Potion.cpp  Stats.cpp
src/states/: EquipmentMenuState.cpp  GameMenuState.cpp  GameState.cpp  ItemMenuState.cpp  ShopState.cpp  StateMachine.cpp  StatusMenuState.cpp
src/utilities/: EquipmentLoader.cpp  Globals.cpp  ItemLoader.cpp  ShopLoader.cpp  Timer.cpp  Typewriter.cpp  crpg_utils.cpp
